# SfMToolKit

./: .gitignore  README.md  __main__.py  sfm.py  util.py
GUI/: commands.py  main_window.py  module_icp.py  module_sfm.py  module_util.py  std_redirector.py  tooltip.py
ICP/: CMakeLists.txt  SfMToolkitICP.cpp  icp-conf.txt
Misc/: unbuffered.py
SfM/: pipeline_builder.py  sfm-conf.txt  sfm.py
Util/: util-conf.txt  util.py  util_builder.py
